--- a/transformations/Dockerfile
+++ b/transformations/Dockerfile
@@ -5,5 +5,6 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
 
-CMD ["python", "transformer.py"]
+#CMD ["python", "transformer.py"]
+CMD ["python", "test_transformer.py"]
 
