--- a/transformations/Dockerfile
+++ b/transformations/Dockerfile
@@ -5,6 +5,5 @@ COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 COPY . .
 
-#CMD ["python", "transformer.py"]
-CMD ["python", "test_transformer.py"]
+CMD ["python", "transformer.py"]
 
