--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
     depends_on:
       - database
       - datalake
-#     restart: always
+    restart: always
 
   # Airflow
   # This service will be used for orchestration
