apply DRY principle

--- a/.env
+++ b/.env
@@ -1,2 +1,15 @@
 AIRFLOW_UID=1000
 AIRFLOW_PROJ_DIR=${PWD}/airflow
+
+#############################################
+# Variables for my services
+#############################################
+NUM_CONNECTION_RETRIES=10
+
+DATALAKE_USER=minio
+DATALAKE_PASSWORD=minio123
+DATALAKE_PORT=9000
+DATALAKE_BUCKET=test-data
+
+DATABASE_PORT=9042
+DATABASE_NAME=my-db
