add mqtt services to docker compose

--- a/.env
+++ b/.env
@@ -6,15 +6,15 @@ AIRFLOW_PROJ_DIR=${PWD}/airflow
 #############################################
 NUM_CONNECTION_RETRIES=10
 
-MQTT_BROKER=my-broker
+MQTT_BROKER=my_broker
 MQTT_PORT=1883
 MQTT_TOPIC=test/dummy_topic
 
 DATALAKE_USER=minio
 DATALAKE_PASSWORD=minio123
 DATALAKE_PORT=9000
-DATALAKE_BUCKET=test-data
-DATALAKE_NAME=my-datalake
+DATALAKE_BUCKET=test_data
+DATALAKE_NAME=my_datalake
 
 DATABASE_PORT=9042
-DATABASE_NAME=my-db
+DATABASE_NAME=my_db
