change bucket name

--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ MQTT_TOPIC=test/dummy_topic
 DATALAKE_USER=minio
 DATALAKE_PASSWORD=minio123
 DATALAKE_PORT=9000
-DATALAKE_BUCKET=test_data
+DATALAKE_BUCKET=test-data # test_data is invalid
 DATALAKE_NAME=my_datalake
 
 DATABASE_PORT=9042
